--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,11 +24,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build and Push
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: Dockerfile
+          file: ./Dockerfile
           platforms: linux/amd64, linux/arm64
           push: true
           tags: ghcr.io/cpressland/bingo:latest
